[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
web3 = { version = "0.18.0", features = ["default"]}
secp256k1 = { version = "0.21" }
ethereum-types = "0.13.0"
hex-literal = "0.3"